--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         async function fetchData(searchTerm) {
             try {
-                const response = await fetch('https://giffyard-aszmo0ckp-surajgupt01s-projects.vercel.app/', {
+                const response = await fetch('https://giffyard-aszmo0ckp-surajgupt01s-projects.vercel.app/search', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
