--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 // Display News
                 news.forEach((item) => {
-                    const imageSrc = item.urlToImage || 'placeholder.png'; 
+                    const imageSrc = item.urlToImage ; 
                     const title = item.title; 
                     const text = item.description; 
                     const link = item.url;
