--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GIFF YARD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 
 </head>
 
@@ -39,7 +39,7 @@
 
             const img = document.createElement('img');
             img.className = 'card-img-top';
-            img.src = imageSrc || 'placeholder.png'; // Use a placeholder if imageSrc is null
+            img.src = imageSrc
             img.alt = 'Card image cap';
 
             const cardBody = document.createElement('div');
